<?xml version="1.0"?>
<package format="2">
  <name>panoramic_converter</name>
  <version>0.1.0</version>
  <description>Convert equirectangular panoramic images to catadioptric or 4-fisheye images</description>

  <maintainer email="user@example.com">user</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>

  <export>
  </export>
</package>
